removed desktop and added keyboard

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "wordle",
-    "short_name": "wordle",
+    "name": "flutter_wordle_challenge",
+    "short_name": "flutter_wordle_challenge",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
