--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: wordle
-description: A new Flutter project.
+description: Wordle template for Flutter Vikings 2022
 publish_to: 'none'
 version: 1.0.0+1
 
