--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,5 +1,7 @@
 include: package:flutter_lints/flutter.yaml
-
+analyzer:
+  exclude:
+    - lib/l10n/*
 linter:
   rules: 
     require_trailing_commas: true
