--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.17.0
   wordle_ui:
     path: packages/wordle_ui
 
@@ -20,3 +23,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
